[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/enemies/boss_basic.gd" type="Script" id=1]
[ext_resource path="res://Assets/tilemaps/new_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/fonts/small_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/scripts/counter_rotation.gd" type="Script" id=4]
[ext_resource path="res://Assets/fonts/Large_Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/images/Anenemnemneme.png" type="Texture" id=6]
[ext_resource path="res://Assets/collectibles/keys/grey_key.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/collectibles/wet_stone.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 72 )

[sub_resource type="CircleShape2D" id=6]
radius = 168.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40, 80 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38.75, 38 )

[node name="boss_root" type="KinematicBody2D" groups=["Enemy"]]
scale = Vector2( 1.15905, 1.16905 )
script = ExtResource( 1 )
title = "Anenemnemneme"
start_dialogue = "The Anenemnemneme has spotted you! That's quite a name... "
end_dialogue = "You beat the Anenemnemneme!"
total_lives = 40
damage = 4
force = 200
item_drop = ExtResource( 8 )
key_reference = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
shape = SubResource( 4 )

[node name="pushback" type="Area2D" parent="."]

[node name="pushback_collision" type="CollisionShape2D" parent="pushback"]
position = Vector2( 193.262, -2.84217e-14 )
scale = Vector2( 1.383, 1 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="." groups=["Enemy"]]
position = Vector2( 1.48773e-06, 1.07288e-06 )
rotation = 3.14159
scale = Vector2( 7, 7 )
texture = ExtResource( 6 )

[node name="arrow_hit_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arrow_hit_box"]
shape = SubResource( 5 )

[node name="attack_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_box"]
position = Vector2( 80, 0 )
shape = SubResource( 3 )

[node name="alert_pos" type="Position2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="alert" type="Label" parent="alert_pos"]
margin_left = -6.0
margin_top = -40.0
margin_right = 6.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 3 )
text = "!"

[node name="boss_UI" type="CanvasLayer" parent="."]
visible = false

[node name="Title" type="Label" parent="boss_UI"]
margin_left = 200.0
margin_top = 552.0
margin_right = 824.0
margin_bottom = 612.0
custom_fonts/font = ExtResource( 5 )
text = "Title"
align = 1

[node name="healthbar" type="ProgressBar" parent="boss_UI"]
margin_left = 16.0
margin_top = 616.0
margin_right = 1008.0
margin_bottom = 632.0
theme = ExtResource( 2 )
value = 60.0
percent_visible = false

[connection signal="body_entered" from="pushback" to="." method="_on_pushback_body_entered"]
[connection signal="area_entered" from="arrow_hit_box" to="." method="_on_arrow_hit_box_area_entered"]
